test-cases/negative/test_077_class_without_name.lay
# negative test: class declaration without class name
# expected: parser should reject this

define class
  the property name of type String


